# Kea-si-course

./: .gitignore  README.md
1._File_format_bonanza/data/: nbaPlayer  nbaPlayer.csv  nbaPlayer.json  nbaPlayer.yaml
1._File_format_bonanza/jsSolution/: package-lock.json  package.json
2._Data_format_translation_servers_includes_REST_API_docs/expressApi_server/: app.js  swaggerDocs.js
2._Data_format_translation_servers_includes_REST_API_docs/fastApi_server/: pyproject.toml
3._Data_servers/expressApi_server/: app.js  package-lock.json  package.json
3._Data_servers/fastApi_server/: main.py  pyproject.toml
Exercise_1/data/: nbaPlayer.csv  nbaPlayer.xml
Exercise_1/jsSolution/: app.js
Exercise_1/pySolution/: main.py
Exercise_2/part_one/expressApi_server/: app.js  convertToObject.js  package-lock.json  package.json
Exercise_2/part_one/expressApi_server/routes/: file-upload.js
Exercise_2/part_one/fastApi_server/: main.py
Exercise_2/part_two/: package-lock.json
Exercise_2/part_two/expressApi_server/: app.js
Exercise_2/part_two/fastApi_server/: main.py  pyproject.toml
Exercise_3/: app.js  package-lock.json  package.json
Exercise_3/public/: index.html
