[tool.poetry]
name = "fastapi-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fastapi_server"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
